fix: Caching and horizontal scroll

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,13 @@
-@charset "utf-8";
-/* CSS Document */
-
 body,td,th,p{
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10pt;
 	color: #333;
-	line-height: 1.5;
+  line-height: 1.5;
 }
 body {
-	background-color: #fdfdfd;
+	background-color: #f3f3f3;
 	margin: 0;
-	position:relative;
+  position: relative;
 }
 ul, li {
 	font-family: Arial, Helvetica, sans-serif;
@@ -36,10 +33,12 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 	display: block;
 }
 #maincontent {
-  background-color: #fdfdfd;
+  background-color: #f3f3f3;
   min-height: 100%;
+  max-width: 100%;
 }
 #footer {
+  max-width: 100%;
   background-color: #444;
   color: #aaa;
   font-size: 8pt;
@@ -101,22 +100,23 @@ nav h1 a {
 #map {
   height: 400px;
   width: 100%;
+  max-width: 100%;
   background-color: #ccc;
 }
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
-  width: 100%;
-  height: 100%;
-  padding: 8px 2px;
+  padding: 8px;
+  max-width: 100%;
   background-color: #3397DB;
   align-items: center;
 }
 .filter-options h2 {
   color: white;
+  padding: 10px 0;
   font-size: 1rem;
   font-weight: normal;
   line-height: 1;
-  margin: 0 20px;
+  margin: 0;
 }
 .filter-options select {
   background-color: white;
@@ -125,8 +125,6 @@ nav h1 a {
   font-size: 11pt;
   height: 35px;
   letter-spacing: 0;
-  margin: 10px;
-  padding: 0 10px;
   width: 200px;
 }
 
@@ -134,7 +132,6 @@ nav h1 a {
 #restaurants-list {
   background-color: #f3f3f3;
   list-style: outside none none;
-  margin: 0;
   padding: 0;
   text-align: center;
   display: flex;
@@ -145,8 +142,8 @@ nav h1 a {
   background-color: #fff;
   font-family: Arial,sans-serif;
   margin: 0 0 12px;
+  padding: 0 0 12px;
   min-height: 380px;
-  padding: 0 30px 12px;
   text-align: left;
   width: 100%;
   max-width: 580px;
@@ -164,7 +161,7 @@ nav h1 a {
   font-weight: 200;
   letter-spacing: 0;
   line-height: 1.3;
-  margin: 20px 0 10px;
+  margin: 12px 0 10px;
   padding-left: 8px;
   text-transform: uppercase;
 }
@@ -212,7 +209,7 @@ nav h1 a {
   background: blue none repeat scroll 0 0;
   height: 360px;
   position: relative;
-  /* right: 0; */
+  right: 0;
   top: 135px;
   width: 100%;
 }
@@ -241,7 +238,7 @@ nav h1 a {
 #restaurant-address {
   font-size: 12pt;
   margin: 10px 0px;
-  padding-left: 6px;
+  padding-left: 8px;
 }
 #restaurant-cuisine {
   background-color: #333;
@@ -250,14 +247,14 @@ nav h1 a {
   font-weight: 300;
   letter-spacing: 10px;
   margin: 0 0 20px;
-  padding: 2px 0;
+  padding: 4px 0;
   text-align: center;
   text-transform: uppercase;
 	width: 100%;
 }
 #restaurant-hours td {
   color: #666;
-  padding-left: 6px;
+  padding-left: 8px;
 }
 
 #restaurant-container, #reviews-container {
@@ -272,7 +269,8 @@ nav h1 a {
 }
 
 #reviews-container {
-  padding: 30px 0 0;
+  padding: 0;
+  margin: 30px 0 0;
   max-width: 580px;
 }
 #reviews-container h2 {
@@ -281,7 +279,7 @@ nav h1 a {
   font-weight: 300;
   letter-spacing: -1px;
   padding-bottom: 1pt;
-  padding-left: 6px;
+  padding-left: 4px;
 }
 #reviews-list {
   margin: 0;
@@ -289,7 +287,7 @@ nav h1 a {
   max-width: 100%;
 }
 #reviews-list li {
-  background-color: #f3f3f3;
+  background-color: white;
   display: flex;
   flex-direction: column;
   list-style-type: none;
